Re-order alphabetically the different items

--- a/lang/fr/help/resource/resourcetype.html
+++ b/lang/fr/help/resource/resourcetype.html
@@ -4,21 +4,6 @@
 Les diff&eacute;rents types de ressources d&eacute;terminent principalement
 la mani&egrave;re dont on acc&egrave;de &agrave; leur contenu :</p>
 
-<p><b>Texte</b>&nbsp;: le type le plus simple. Il vous est juste possible
-de saisir ou de modifier le texte du document dans un formulaire
-que vous trouverez sur la page suivante. Certaines constructions
-que vous &eacute;crirez seront automatiquement mises en forme,
-exactement comme dans les messages post&eacute;s sur les forums. Pour de
-l'aide sur la mise en forme de texte&nbsp;:
-<?php helpbutton("text", get_string("helptext")) ?></p>
-
-<p><b>Texte HTML</b>&nbsp;: pour les utilisateurs plus exp&eacute;riment&eacute;s.
-Aucune mise en forme automatique ne sera r&eacute;alis&eacute;e, vous aurez &agrave;
-la faire vous m&ecirc;me en utilisant des balises HTML.</p>
-
-<p><b>R&eacute;f&eacute;rence</b>&nbsp;: une r&eacute;f&eacute;rence bibliographique &agrave; un livre
-ou &agrave; un journal.</p>
-
 <p><b>Fichier envoy&eacute;</b>&nbsp;: affichera un fichier que
 vous aurez envoy&eacute; sur le cours. Voir la section &laquo;&nbsp;Fichiers&nbsp;&raquo;.</p>
 
@@ -32,3 +17,18 @@ page dans une nouvelle fen&ecirc;tre, laissant intacte celle du cours.</p>
 Comme le type pr&eacute;c&eacute;dent, ceci affichera une page web. En revanche,
 la page sera affich&eacute;e dans un cadre du navigateur, comme si elle
 faisait partie du cours.</p>
+
+<p><b>R&eacute;f&eacute;rence</b>&nbsp;: une r&eacute;f&eacute;rence
+bibliographique &agrave; un livre ou &agrave; un journal.</p>
+
+<p><b>Texte</b>&nbsp;: le type le plus simple. Il vous est juste possible
+de saisir ou de modifier le texte du document dans un formulaire
+que vous trouverez sur la page suivante. Certaines constructions
+que vous &eacute;crirez seront automatiquement mises en forme,
+exactement comme dans les messages post&eacute;s sur les forums. Pour de
+l'aide sur la mise en forme de texte&nbsp;:
+<?php helpbutton("text", get_string("helptext")) ?></p>
+
+<p><b>Texte HTML</b>&nbsp;: pour les utilisateurs plus exp&eacute;riment&eacute;s.
+Aucune mise en forme automatique ne sera r&eacute;alis&eacute;e, vous aurez &agrave;
+la faire vous m&ecirc;me en utilisant des balises HTML.</p>
