Modification of "Fichier"

--- a/lang/fr/help/resource/resourcetype.html
+++ b/lang/fr/help/resource/resourcetype.html
@@ -4,8 +4,9 @@
 Les diff&eacute;rents types de ressources d&eacute;terminent principalement
 la mani&egrave;re dont on acc&egrave;de &agrave; leur contenu :</p>
 
-<p><b>Fichier envoy&eacute;</b>&nbsp;: affichera un fichier que
-vous aurez envoy&eacute; sur le cours. Voir la section &laquo;&nbsp;Fichiers&nbsp;&raquo;.</p>
+<p><b>Fichier</b>&nbsp;: affichera un fichier que vous aurez
+pr&eacute;alablement d&eacute;pos&eacute; dans le cours. Voir la section
+&laquo;&nbsp;Fichiers&nbsp;&raquo;.</p>
 
 <p><b>Page web (externe)</b>&nbsp;: un lien vers une page sur le web.
 Lorsque quelqu'un cliquera sur cette ressource, il sera envoy&eacute; sur cette page,
