Some typos corrected

--- a/lang/fr/help/resource/index.html
+++ b/lang/fr/help/resource/index.html
@@ -1,7 +1,7 @@
-<p>Module des ressources</p>
+<p>Ressources</p>
 <ul>
-  <li><a href="help.php?module=resource&amp;file=resourcetype.html">Type de ressource</a>
-  <li><a href="help.php?module=resource&amp;file=summary.html">R&eacute;sum&eacute; du document</a>
-  <li><a href="help.php?module=resource&amp;file=program.html">Programme externe</a>
+  <li><a href="help.php?module=resource&amp;file=resourcetype.html">Types de ressource</a></li>
+  <li><a href="help.php?module=resource&amp;file=summary.html">R&eacute;sum&eacute; du document</a></li>
+  <li><a href="help.php?module=resource&amp;file=program.html">Programme externe</a></li>
 </ul>
 
