--- a/lang/fr/help/resource/program.html
+++ b/lang/fr/help/resource/program.html
@@ -7,12 +7,12 @@ accepter des donn&eacute;es en provenance de Moodle.</p>
 transmises par <i>http_get</i> et comprend :</p>
 
 <ul>
-  <li>extern_nav : l'adresse URL &agrave; partir de laquelle la
+  <li>extern_nav&nbsp;: l'adresse URL &agrave; partir de laquelle la
 ressource externe est appel&eacute;e</li>
-  <li>extern_usr : le nom de l'utilisateur courant</li>
-  <li>extern_nam : le nom complet de l'utilisateur courant</li>
-  <li>extern_tim : l'heure actuelle</li>
-  <li>extern_pwd : un mot de passe unique</li>
+  <li>extern_usr&nbsp;: le nom de l'utilisateur courant</li>
+  <li>extern_nam&nbsp;: le nom complet de l'utilisateur courant</li>
+  <li>extern_tim&nbsp;: l'heure actuelle</li>
+  <li>extern_pwd&nbsp;: un mot de passe unique</li>
 </ul>
 <p>Ces informations et ce proc&eacute;d&eacute; seront modifi&eacute;s
 sous peu.</p>
