--- a/lang/fr/help/resource/resourcetype.html
+++ b/lang/fr/help/resource/resourcetype.html
@@ -19,6 +19,12 @@ Comme le type pr&eacute;c&eacute;dent, ceci affichera une page web. En revanche,
 la page sera affich&eacute;e dans un cadre du navigateur, comme si elle
 faisait partie du cours.</p>
 
+<p><b>Programme</b> : un programme externe utilisant comme param&egrave;tres
+des informations sur l'utilisateur et le cours actuels,
+fournies par Moodle. Des applications externes peuvent ainsi
+coop&eacute;rer avec Moodle. Plus d'informations sur les ressources
+<a href="help.php?file=program.html&amp;module=resource">Programme</a>.</p>
+
 <p><b>R&eacute;f&eacute;rence</b>&nbsp;: une r&eacute;f&eacute;rence
 bibliographique &agrave; un livre ou &agrave; un journal.</p>
 
@@ -33,3 +39,11 @@ l'aide sur la mise en forme de texte&nbsp;:
 <p><b>Texte HTML</b>&nbsp;: pour les utilisateurs plus exp&eacute;riment&eacute;s.
 Aucune mise en forme automatique ne sera r&eacute;alis&eacute;e, vous aurez &agrave;
 la faire vous m&ecirc;me en utilisant des balises HTML.</p>
+
+<p><b>Texte Wiki</b>&nbsp;: permet plus de possibilit&eacute;s de formatage
+que Texte, sans avoir besoin de conna&icirc;tre le langage HTML. Vous pouvez
+taper du texte, mais aussi utiliser un large &eacute;ventail de possibilit&eacute;s
+de formatage (par exemple, *ceci sera en gras*, /ceci sera en italique/)
+pour obtenir facilement des mises en pages complexes. Plus d'informations
+sur le <a href="help.php?file=wiki.html">Texte Wiki</a>.</p>
+
