--- a/lang/nl/help/exercise/elements.html
+++ b/lang/nl/help/exercise/elements.html
@@ -36,7 +36,7 @@ of aspecten. De leraar moet een beoordelingsset uitwerken, waar in beschreven st
 alle items aanwezig zijn, wanneer er één ontbreekt, wanneer er twee ontbreken enz. Als sommige items belangrijker zijn
 dan andere, dan kunnen die een gewicht, groter dan één krijgen. Minder belangrijke punten kunnen een gewicht kleiner dan 
 één krijgen. De hele &quot;foutentelling&quot; is een gewogen som van de ontbrekende items. De beoordeler kan altijd 
-kleine aanpassingen doen aan deze gesuggereerde cijfers.ested grades.
+kleine aanpassingen doen aan deze gesuggereerde cijfers.
 
 <P><B>Criterium</B> De onderdelen krijgen een reeks &quot;peil&quot;statements die gebruikt kunnen
 worden om de opdracht te rangschikken.
