Some typos corrected

--- a/lang/fr/help/quiz/attempts.html
+++ b/lang/fr/help/quiz/attempts.html
@@ -1,6 +1,6 @@
-<p align=center><b>Tentatives multiples pour effectuer le test</b></p>
+<p align=center><b>Tentatives multiples pour effectuer un test</b></p>
 
-<p>On peut permettre aux étudiants d'effectuer le test à plusieurs reprises. </p>
+<p>On peut permettre aux &eacute;tudiants d'effectuer un test &agrave; plusieurs reprises. </p>
 
-<p>Le test s'intègre alors dans un processus d'évaluation formative qui favorise
-l'apprentissage chez les étudiants. </p>
+<p>Le test s'int&egrave;gre alors dans un processus d'&eacute;valuation formative qui favorise
+l'apprentissage chez les &eacute;tudiants. </p>
