--- a/lang/fr/help/quiz/formatblackboard.html
+++ b/lang/fr/help/quiz/formatblackboard.html
@@ -1,4 +1,4 @@
-<p align="center"><b>Importation de questionnaires sous format
+<p align="center"><b>Importation de questions en format
 &laquo;&nbsp;Blackboard&nbsp;&raquo;</b></p>
 
 <p>La documentation de cette option n'est pas encore
