--- a/lang/fr/help/quiz/formatcustom.html
+++ b/lang/fr/help/quiz/formatcustom.html
@@ -1,4 +1,4 @@
-<p align="center"><b>Importation de questionnaires de format 
+<p align="center"><b>Importation de questions en format 
 personnalis&eacute;</b></p>
 
 <p>La documentation sur cette option n'est pas encore
