--- a/lang/fr/help/quiz/formatmissingword.html
+++ b/lang/fr/help/quiz/formatmissingword.html
@@ -1,4 +1,4 @@
-<p align="center"><b>Importation de questionnaire de format
+<p align="center"><b>Importation de questions en format
 &laquo;&nbsp;mots manquants&nbsp;&raquo;</b></p>
 
 <p>La documentation sur cette option n'est pas encore
