--- a/login/signup_form.html
+++ b/login/signup_form.html
@@ -30,13 +30,13 @@
 	<td colspan="2"><p><b><?php print_string("createuserandpass") ?>:</b></p></td>
 </tr>
 <tr valign="top">
-	<td><p><?php print_string("username") ?>:</p></td>
+	<td align=right><p><?php print_string("username") ?>:</p></td>
 	<td><input type="text" name="username" size="12" value="<?php p($user->username) ?>" />
 	<?php if (!empty($err->username)) { formerr($err->username); } ?>
 	</td>
 </tr>
 <tr valign="top">
-	<td><p><?php print_string("password") ?>:</p></td>
+	<td align=right><p><?php print_string("password") ?>:</p></td>
 	<td><input type="password" name="password" size="12" value="<?php p($user->password) ?>" />
 	<?php if (!empty($err->password)) { formerr($err->password); } ?>
 	</td>
@@ -48,31 +48,37 @@
               </td>
             </tr>
 <tr valign="top">
-	<td><p><?php print_string("email") ?>:</p></td>
+	<td align=right><p><?php print_string("email") ?>:</p></td>
 	<td><input type="text" name="email" size="25" value="<?php p($user->email) ?>" />
 	<?php if (!empty($err->email)) { formerr($err->email); } ?>
 	</td>
 </tr>
 <tr valign="top">
-	<td><p><?php print_string("firstname") ?>:</p></td>
+	<td align=right><p><?php print_string("emailagain") ?>:</p></td>
+	<td><input type="text" name="email2" size="25" value="<?php p($user->email2) ?>" />
+	<?php if (!empty($err->email2)) { formerr($err->email2); } ?>
+	</td>
+</tr>
+<tr valign="top">
+	<td align=right><p><?php print_string("firstname") ?>:</p></td>
 	<td><input type="text" name="firstname" size="25" value="<?php p($user->firstname) ?>" />
 	<?php if (!empty($err->firstname)) { formerr($err->firstname);} ?>
 	</td>
 </tr>
 <tr valign="top">
-	<td><p><?php print_string("lastname") ?>:</p></td>
+	<td align=right><p><?php print_string("lastname") ?>:</p></td>
 	<td><input type="text" name="lastname" size="25" value="<?php p($user->lastname) ?>" />
 	<?php if (!empty($err->lastname)) { formerr($err->lastname);} ?>
 	</td>
 </tr>
 <tr valign="top">
-	<td><p><?php print_string("city") ?>:</p></td>
+	<td align=right><p><?php print_string("city") ?>:</p></td>
 	<td><input type="text" name="city" size="25" value="<?php p($user->city) ?>" />
 	<?php if (!empty($err->city)) { formerr($err->city);} ?>
 	</td>
 </tr>
 <tr valign="top">
-	<td><p><?php print_string("country") ?>:</p></td>
+	<td align=right><p><?php print_string("country") ?>:</p></td>
 	<td><?php choose_from_menu (get_list_of_countries(), "country", $user->country, get_string("selectacountry"), "", "") ?>
 	<?php if (!empty($err->country)) { formerr($err->country);} ?>
 	</td>
