--- a/lang/fr/help/quiz/index.html
+++ b/lang/fr/help/quiz/index.html
@@ -57,24 +57,23 @@
   <li><a
   href="help.php?module=quiz&amp;file=feedback.html">Feedback</a></li>
   <li><a
-  href="help.php?module=quiz&amp;file=questiontypes.html">Type de
+  href="help.php?module=quiz&amp;file=questiontypes.html">Types de
   question - cr&eacute;ation d'une nouvelle question</a></li>
   <li><a
   href="help.php?module=quiz&amp;file=random.html">Questions
-  choisies au hasard</a></li>
+  alŽatoires/a></li>
   <li><a
   href="help.php?module=quiz&amp;file=randomsamatch.html">Questions
-  d'appariement &agrave; partir d'un ensemble de
-  questions &agrave; r&eacute;ponse courte</a></li>
+  d'appariement al&eacute;atoires</a></li>
   <li><a
   href="help.php?module=quiz&amp;file=shortanswer.html">Questions
   &agrave; r&eacute;ponse courte</a></li>
   <li><a
-  href="help.php?module=quiz&amp;file=shuffleanswers.html">Ordre
-  al&eacute;atoire des r&eacute;ponses</a></li>
+  href="help.php?module=quiz&amp;file=shuffleanswers.html">M&eacute;langer
+  les r&eacute;ponses</a></li>
   <li><a
-  href="help.php?module=quiz&amp;file=shufflequestions.html">Ordre
-  al&eacute;atoire des questions</a></li>
+  href="help.php?module=quiz&amp;file=shufflequestions.html">M&eacute;langer
+  les questions</a></li>
   <li><a
   href="help.php?module=quiz&amp;file=truefalse.html">Questions
   Vrai ou Faux</a></li>
