--- a/lang/fr/help/quiz/index.html
+++ b/lang/fr/help/quiz/index.html
@@ -1,4 +1,4 @@
-<h3>Tests</h3>
+<p>Tests</p>
 
 <ul>
   <li><a
@@ -61,7 +61,7 @@
   question - cr&eacute;ation d'une nouvelle question</a></li>
   <li><a
   href="help.php?module=quiz&amp;file=random.html">Questions
-  alŽatoires/a></li>
+  al&eacute;atoires</a></li>
   <li><a
   href="help.php?module=quiz&amp;file=randomsamatch.html">Questions
   d'appariement al&eacute;atoires</a></li>
