--- a/backup/config.html
+++ b/backup/config.html
@@ -111,7 +111,7 @@
     <?php choose_from_menu($yesno_array, "backup_sche_coursefiles", $backup_config->backup_sche_coursefiles, "") ?>
     </td>
     <td>
-    <?php print_string("backupcuoursefileshelp") ?>
+    <?php print_string("backupcoursefileshelp") ?>
     </td>
 </tr>
 <tr valign=top>
@@ -165,7 +165,7 @@
 </tr>
 <tr valign=top>
     <td colspan = 3 align=center>
-        <?php print_string("saveto") ?>: <input name="backup_sche_destination" type="text" size=\"40\" value="<?php p($backup_config->backup_sche_destination) ?>">
+        <?php print_string("saveto") ?>: <input name="backup_sche_destination" type="text" size="40" value="<?php p($backup_config->backup_sche_destination) ?>"><br><?php print_string("backupsavetohelp") ?>
     </td>
 </tr>
 <tr>
