Modified help files for late submissions and reduction of the number of phases.

--- a/lang/en/help/exercise/administration.html
+++ b/lang/en/help/exercise/administration.html
@@ -27,6 +27,13 @@
 	of any change on the grades seen in the Grades page and in the Final Grades 
 	list is immediate.</p>
 
+<p>The second table is used to set the two options for the League Table. This table 
+    is (optionally) shown to the students at the end of the assignment. If the 
+    number of entries is set to a number larger than zero then the table is 
+    displayed to the student when the assignment is in its final phase. The other 
+    option determines whether student names are shown in the table. Note the League 
+    Table as seen by the teacher always shows studnet names regardless of this setting.
+
 <p>The Administration page also lists the teacher's submissions (the decriptions of
 	the Exercise), the students' (initial) assessment of their own work, and the students'
 	submissions. These tables allow all these items, where appropriate, to be re-titled, 
