--- a/lang/en/help/exercise/finalgrades.html
+++ b/lang/en/help/exercise/finalgrades.html
@@ -6,5 +6,7 @@
 	grade from these two grades. The final grade given for this assignment will either be 
 	the average of these overall grades or the overall grade of the best submission.
 
-<p>The League table lists each student's best submission. The table is in grade order with 
-	the best submission first.</p>
+<p>The League table optionally lists the best submissions. The number of entries in 
+    the table is set on the Administration page, if that number is set to zero then 
+    the League Table is not displayed. The table is in grade order with the best submission 
+    first. Only a student's best submission is shown in the table.</p>
