--- a/lang/en/help/exercise/grade.html
+++ b/lang/en/help/exercise/grade.html
@@ -3,5 +3,6 @@
 <p>This value determines the maximum grade which can be awarded in 
 	the exercise. 	The range is 0 to 100%.. This value can be changed at 
 	any time during the exercise. Any change has an	immediate effect in 
-	the Grades page and to the grades given to assessments and 
-	submissions.</p>
+	the Grades page, the grades given to assessments and submissions and the 
+    display of the final finals and the League Table (if the assignment is 
+    in that phase).</p>
