--- a/lang/en/help/exercise/managing.html
+++ b/lang/en/help/exercise/managing.html
@@ -1,7 +1,7 @@
 <P ALIGN=CENTER><B>Managing an Exercise Assignment</B></P>
 
 <P>An Exercise Assignment is slightly more complex than an ordinary assignment.
-	It involves four steps or phases. These are
+	It involves three steps or phases. These are
 <OL>
 <LI><p><b>Set up Exercise </b> The assessment of the work produced in the 
 	exercise is made easier if it is broken into a number of assessment ELEMENTS. 
@@ -41,24 +41,34 @@
 	set of submissions. This option can be changed at any time during the Exercise
 	by updating the Exercise, it's effect is seen immediately in the Grade page.
 </p>
-	
-<LI><p><b>Stop Student Assessments and Submissions</b> After the deadline 
-	has passed, the teacher moves the Exercise to this phase to stop further 
-	assessments and submissions. The teacher should complete the grading 
-	any outstanding assessments and submissions before moving the Exercise
-	to its final phase.
 
+<p>When the assignment's deadline is reached a student can submit or re-submit work.
+    The work is flagged as &quot;late&quot;. The work appears in the list of work to
+    be assessed and the teacher can, if desired, assess the work in the normal way.
+    In the various lists of peices of work the submission date is shown as red (and 
+    in the list of work to be be marked the period since submission is also shown in 
+    red). If graded, the grade of late work is shown in red and in brackets. Such 
+    grades are <b>not</b> used in the calculation of final grades and are not counted 
+    in the Grades pages. The teacher can clear the late flag by going into in the 
+    Administration page and clicking on the appropriate link. The work will then be 
+    used in the calculation of the final grade. </p>
+	
 <li><p><b>Show Overall Grades and League Table</b> In this final phase of 
 	the Exercise the students can see their &quot;final&quot; grades. In all 
 	phases of the Exercise (except the first phase), grades are available to
 	the students, they are, however, only &quot;partial&quot; grades as they are
 	calculated on the fly from the assessments available at the time.</p>
 	
-<p>The students (and the teacher) are also shown a &quot;League Table&quot;
+<p>In this final phase, students <b>cannot</b> make any further submissions. 
+    In effect the assignment is closed and the teacher has the option of showing 
+    the students examples of the best pieces of work submitted...</p>
+    
+<p>The students (and the teacher) can also be shown a &quot;League Table&quot;
 	of the student submissions. These are listed in order of grade, the top submission
 	is first. Here the grade given to the submission is teacher's
 	grade. If a student submitted more than one piece of work only their best piece 
-	of work is shown in this table. </p>
+	of work is shown in this table. If the number of entries in the table is set to
+    zero then this table is not displayed.</p>
 </ol>
 
 <p>The student's grade is a weighted combination of the teacher's grading of their
