--- a/lang/en/help/exercise/moreinfo.html
+++ b/lang/en/help/exercise/moreinfo.html
@@ -53,18 +53,26 @@ it or not as the case may be.</p>
 	of the student revised work rather than undertaking an assessment from 
 	scratch.</p>
 	
-<p>When the deadline for the exercise the teacher moves the exercise to the 
-	next phase. This stops further submissions from the students. The assessments 
-	and submissions which have not be graded and assessed should now be done. 
+<p>When the deadline for the exercise is reached students can continue to submit. 
+    However, such work is flagged as &quot;late&quot;. The teacher can, if 
+    desired, grade the work and give feedback to the student. The grades of 
+    late work are held back and are <b>not</b> used in the calculation of final 
+    grades. If, for whatever reason, the teacher wishes to accept a piece of 
+    late work as a normal piece of work the late flag can be cleared by going 
+    into the Administration page, finding the submission and clicking on the 
+    appropriate link. The grade for that work will then be used in the calculation 
+    of a final grades.</p> 
 	
-<p>With all the submissions graded, the exercise is moved to the 
-	final phase. The students can now see their final grades and the grades given to 
+<p>When all the submissions have been graded, the exercise is moved to the 
+	final phase. Further student submissions are now not allowed. The students 
+    can now see their final grades together with the grades given to 
 	their submissions. A student's grade for the exercise is a weighted combination
 	of the teacher's grade for their self-assessment and the teacher's grade for that 
 	work. (The grade given by the student is <b>not</b> used.) For the submissions 
 	themselves	the grade is teacher's assessment. The weights used for the two 
 	grades (the grading grade and the actual grade for the work) can be set and 
-	changed at	any time during the assignment.</p>
+	changed at any time during the assignment (the weights are set on the 
+    Administration page).</p>
 	
 <p>When the teacher allows students to resubmit work, the teacher should 
 	consider how to set the option which controls how the student's final grade 
