--- a/lang/fr/help/choice/options.html
+++ b/lang/fr/help/choice/options.html
@@ -1,4 +1,4 @@
-<p align="center"><b>Options de Sondage</b></p>
+<p align="center"><b>Options des sondages</b></p>
 
 <p>Vous indiquez ici les r&eacute;ponses possibles parmi lesquelles
   les participants auront &agrave; choisir.</p>
