--- a/lang/fr/help/workshop/analysisofassessments.html
+++ b/lang/fr/help/workshop/analysisofassessments.html
@@ -25,7 +25,9 @@ en changeant &agrave; chaque fois une ou plusieurs options.
 L'analyse est contr&ocirc;l&eacute;e par trois options
 apparaissant au sommet de la page.</p>
 
-<ol> <li>L'option &laquo;&nbsp;<b>Pond&eacute;ration des
+<ol>
+
+<li>L'option &laquo;&nbsp;<b>Pond&eacute;ration des
 &eacute;valuations de l'enseignant</b>&nbsp;&raquo; permet de
 fixer le poids des &eacute;valuations faites par l'enseignant en
 comparaison avec celles des &eacute;tudiants, lors de la phase
@@ -43,18 +45,19 @@ aussi dans la partie sup&eacute;rieure de la liste de la Table
 d'erreurs. Les &eacute;tudiants situ&eacute;s au bas de la liste
 sont ceux qui &eacute;valuent d'une fa&ccedil;on
 diff&eacute;rente de celle de l'enseignant (ou de celle des
-&eacute;tudiants du haut de la liste).<br /> Plus l'enseignant a
-effectu&eacute; d'&eacute;valuations, et moins l'on aura besoin
-d'utiliser cette option pour forcer l'enseignant &agrave;
-appara&icirc;tre au haut de la liste. Il est &agrave; noter que
-cette option <b>n'applique pas</b> un coefficient aux
-&eacute;valuations de l'enseignant lors du calcul des notes
-finales. Dans ce calcul, les &eacute;valuations de l'enseignant
-ont le m&ecirc;me poids que celles des &eacute;tudiants. Ainsi
-par exemple, si un travail d'&eacute;tudiant est not&eacute; 41%
-par l'enseignant et 45% et 55% par ses pairs, la note finale de
-ce travail sera de (41% + 45% + 55%) / 3, c'est-&agrave;-dire
-47%.</li>
+&eacute;tudiants du haut de la liste).<br />
+
+Plus l'enseignant a effectu&eacute; d'&eacute;valuations, et
+moins l'on aura besoin d'utiliser cette option pour forcer
+l'enseignant &agrave; appara&icirc;tre au haut de la liste. Il
+est &agrave; noter que cette option <b>n'applique pas</b> un
+coefficient aux &eacute;valuations de l'enseignant lors du calcul
+des notes finales. Dans ce calcul, les &eacute;valuations de
+l'enseignant ont le m&ecirc;me poids que celles des
+&eacute;tudiants. Ainsi par exemple, si un travail
+d'&eacute;tudiant est not&eacute; 41% par l'enseignant et 45% et
+55% par ses pairs, la note finale de ce travail sera de (41% +
+45% + 55%) / 3, c'est-&agrave;-dire 47%.</li>
 
 <li>L'option &laquo;&nbsp;<b>Pond&eacute;ration pour les notes
 des &eacute;valuations</b>&nbsp;&raquo; est utilis&eacute;e dans
@@ -115,30 +118,41 @@ que les valeurs de cette colonne soient dans cette limite.</li>
 
 </ol>
 
-<p>In addition to the Error Table the analysis lists the grades
-of all assessments and the final grades given to the students.
-This table should be inspected to see if the results are
-reasonable. In particular if many assessments are dropped then
-some submissions may left unassessed and the student's final
-grade will be far too small. The analysis does given the number
-of submissions at the top of page and again just before the
-Grades Table. These two numbers should be same. If there are one
-or more unassessed submissions and the teacher does not want to
-decrease the number of dropped assessments then those submissions
-should be assessed by the teacher and the analysis repeated. It
-is important that all submissions are assessed at least once in
-the final stage of the analysis that is when the final grades are
-calculated.</p>
+<p>En plus de la Table d'erreur, l'analyse &eacute;num&egrave;re
+les notes de toutes les &eacute;valuations et les notes finales
+donn&eacute;es aux &eacute;tudiants. Cette table devrait
+&ecirc;tre examin&eacute;e pour s'assurer que les
+r&eacute;sultats sont raisonnables. En particulier si un grand
+nombre d'&eacute;valuations sont rejet&eacute;es, certains
+travaux pourraient rest&eacute;s sans &eacute;valuation et la
+note finale de l'&eacute;tudiant beaucoup trop basse. L'analyse
+affiche le nombre de travaux remis au haut de la page et
+&eacute;galement juste avant le &laquo;&nbsp;Tableau des
+notes&nbsp;&raquo;. Ces deux nombres devraient &ecirc;tre
+&eacute;gaux. S'il y a un ou plusieurs travaux sans
+&eacute;valuation et que l'enseignant ne veut pas diminuer le
+nombre d'&eacute;valuations &agrave; rejeter, ces travaux doivent
+alors &ecirc;tre &eacute;valu&eacute;s par l'enseignant et
+l'analyse r&eacute;p&eacute;t&eacute;e. Il est essentiel que tous
+les travaux remis soient &eacute;valu&eacute;s au moins une fois
+lors de la derni&egrave;re phase de l'analyse,
+c'est-&agrave;-dire lorsque les notes finales sont
+calcul&eacute;es.</p>
 
-<p>There is a balance between the number of assessments dropped
-and the overall final grade. The more assessments dropped the
-lower the final grades are likely to be. However, if poor
-assessments are <b>not</b> dropped then students may complain
-about the quality of the assessments which determine the grade
-for their work. Provided there are enough assessments by the
-teacher to dominate the analysis without too much forcing, then
-it would seem reasonable to drop somewhere between 15% and 30% of
-the assessments.</p>
+<p>Il existe un &eacute;quilibre entre le nombre
+d'&eacute;valuations rejet&eacute;es et les notes finales. Plus
+il y a d'&eacute;valuations rejet&eacute;es, et plus les notes
+finales risqueront d'&ecirc;tre basses. Cependant, si les
+&eacute;valuations m&eacute;diocres <b>ne sont pas</b>
+rejet&eacute;es, les &eacute;tudiants pourraient se plaindre de
+la qualit&eacute; des &eacute;valuations qui leur sont
+donn&eacute;es et qui comptent dans la note finale de leur
+travail. Si l'enseignant a fait suffisamment d'&eacute;valuations
+de fa&ccedil;on &agrave; dominer l'analyse pas trop
+artificiellement, une valeur raisonnable du pourcentage
+d'&eacute;valuations &agrave; rejeter se situe entre 15% et
+30%.</p>
 
-<p>Note that this analysis does take a long time as it involves
-an iterative process. Lengthy delays are to be expected.</p>
+<p>Il est &agrave; remarquer que cette analyse prend du temps,
+car elle comprend un processus it&eacute;ratif. De longs
+d&eacute;lais sont donc &agrave; pr&eacute;voir.</p>
