--- a/lang/fr/help/workshop/analysisofassessments.html
+++ b/lang/fr/help/workshop/analysisofassessments.html
@@ -1,8 +1,8 @@
 <p align="center"><b>Analyse des &eacute;valuations</b></p>
 
-<p>Cette analyse observe les &eacute;valuations faites sur les
+<p>Cette analyse permet d'examiner les &eacute;valuations faites sur les
 exemples, comme sur celles effectu&eacute;es durant la phase
-d'&eacute;valuation par les pair. Elle tente de
+d'&eacute;valuation par les pairs. Elle tente de
 s&eacute;lectionner les meilleures parmi les &eacute;valuations
 d'&eacute;tudiants et d'enseignants. Ces
 &laquo;&nbsp;bonnes&nbsp;&raquo; &eacute;valuations sont alors
@@ -17,17 +17,17 @@ exemple et chaque travail, mais pour que l'analyse soit
 significative, il est mieux d'avoir de la part de l'enseignant
 plus d'&eacute;valuations celles faites par la moyenne des
 &eacute;tudiants. Plus il y a d'&eacute;valuations faites par
-l'enseignant et plus les r&eacute;sultats de l'analyse seront
+l'enseignant, plus les r&eacute;sultats de l'analyse seront
 fiables.</p>
 
 <p>L'analyse se fait habituellement &agrave; plusieurs reprises,
 en changeant &agrave; chaque fois une ou plusieurs options.
 L'analyse est contr&ocirc;l&eacute;e par trois options
-apparaissant au sommet de la page.</p>
+apparaissant en haut de la page.</p>
 
 <ol>
 
-<li>L'option &laquo;&nbsp;<b>Pond&eacute;ration des
+<li>L'option &laquo;&nbsp;<b>Coefficient des
 &eacute;valuations de l'enseignant</b>&nbsp;&raquo; permet de
 fixer le poids des &eacute;valuations faites par l'enseignant en
 comparaison avec celles des &eacute;tudiants, lors de la phase
@@ -36,9 +36,10 @@ strat&eacute;gie d'&eacute;valuation domine celles des
 &eacute;tudiants, alors il devrait &ecirc;tre parmi tous ceux qui
 ont donn&eacute; des notes celui ayant l'erreur moyenne la plus
 faible dans la &laquo;&nbsp;Table d'erreurs&nbsp;&raquo;. Si
-l'enseignant n'est pas en t&ecirc;te de liste, le poids de ses
-&eacute;valuations est augment&eacute; jusqu'&agrave; ce qu'il
-ait la plus petite erreur moyenne. En cons&eacute;quence, les
+l'enseignant n'est pas en t&ecirc;te de liste, on augmente
+prgressivement le coefficient de ses
+&eacute;valuations jusqu'&agrave; ce qu'il ait la plus petite
+erreur moyenne. En cons&eacute;quence, les
 &eacute;valuations de l'enseignant sont dominantes et celles des
 &eacute;tudiants qui &eacute;valuent comme lui se retrouvent
 aussi dans la partie sup&eacute;rieure de la liste de la Table
@@ -47,7 +48,7 @@ sont ceux qui &eacute;valuent d'une fa&ccedil;on
 diff&eacute;rente de celle de l'enseignant (ou de celle des
 &eacute;tudiants du haut de la liste).<br />
 
-Plus l'enseignant a effectu&eacute; d'&eacute;valuations, et
+Plus l'enseignant a effectu&eacute; d'&eacute;valuations,
 moins l'on aura besoin d'utiliser cette option pour forcer
 l'enseignant &agrave; appara&icirc;tre au haut de la liste. Il
 est &agrave; noter que cette option <b>n'applique pas</b> un
@@ -59,24 +60,24 @@ d'&eacute;tudiant est not&eacute; 41% par l'enseignant et 45% et
 55% par ses pairs, la note finale de ce travail sera de (41% +
 45% + 55%) / 3, c'est-&agrave;-dire 47%.</li>
 
-<li>L'option &laquo;&nbsp;<b>Pond&eacute;ration pour les notes
-des &eacute;valuations</b>&nbsp;&raquo; est utilis&eacute;e dans
+<li>L'option &laquo;&nbsp;<b>Coefficient de la performance
+d'&eacute;valuation</b>&nbsp;&raquo; est utilis&eacute;e dans
 le calcul de la note finale. Pour calculer la
 &laquo;&nbsp;performance d'&eacute;valuation&nbsp;&raquo; d'un
 &eacute;tudiant, une formule simple est utilis&eacute;e&nbsp;:
 c'est le rapport entre le nombre des
 &laquo;&nbsp;bonnes&nbsp;&raquo; &eacute;valuations d'un
 &eacute;tudiant et le nombre maximum de celles qu'il peut
-effectuer. Si par exemple les travail demande aux
+effectuer. Si par exemple la consigne demande aux
 &eacute;tudiants d'&eacute;valuer 3 travaux d'exemples et 5
-travaux de pairs, et que l'&eacute;tudiant &eacute;value 7
-travaux et qu'une &eacute;valuation parmi celles-ci est
+travaux de pairs, et que l'&eacute;tudiant &eacute;value au total
+7 travaux et qu'une &eacute;valuation parmi celles-ci est
 rejet&eacute;e lors de l'analyse (voir ci-dessous), sa
 performance d'&eacute;valuation est alors de (7 - 1)/8,
 c'est-&agrave;-dire 75%. La note finale d'un &eacute;tudiant est
-une combinaison pond&eacute;r&eacute;e de sa performace
-d'&eacute;valuation et de la note re&ccedil;ue pour son propre
-travail (ou de la meilleure, s'il a rendu plusieurs travaux). Le
+une moyenne pond&eacute;r&eacute;e de sa performace
+d'&eacute;valuation et de la note de son propre
+travail (ou du meilleur, s'il a rendu plusieurs travaux). Le
 coefficient de la note du travail est toujours 1. Donc si vous
 choisissez de r&eacute;gler cette option sur 0.5, cela signifie
 que la performance d'&eacute;valuation aura pour la note finale
@@ -90,11 +91,11 @@ fa&ccedil;ons.
 
 <ul>
 
-<li>Suivant la fa&ccedil;on dont la performance
+<li>Selon la fa&ccedil;on dont la performance
 d'&eacute;valuation est calcul&eacute;e et si aucune
 &eacute;valuation n'est rejet&eacute;e, chaque &eacute;tudiant
-pourrait, en ayant &eacute;valu&eacute; tous les travaux qui lui
-sont soumis, obtenir la note maximale. Si l'enseignant
+pourrait obtenir la note maximale en &eacute;valuant
+tous les travaux qui lui sont soumis. Si l'enseignant
 d&eacute;sire avoir une moyenne plus raisonnable, il peut, en
 r&eacute;glant par exemple cette option &agrave; 30%, faire en
 sorte que la moyenne des performances d'&eacute;valuation soit
