--- a/lang/fr/help/workshop/addingacomment.html
+++ b/lang/fr/help/workshop/addingacomment.html
@@ -5,7 +5,7 @@ commentaires&nbsp;:</p>
 
 <ol> <li>L'&eacute;tudiant qui &eacute;value le travail (le
 correcteur) peut ajouter un commentaire pour compl&eacute;ter ou
-pour clarifier son &eacute;valuation.</li>
+clarifier son &eacute;valuation.</li>
 
 <li>L'&eacute;tudiant dont le travail est &eacute;valu&eacute;
 peut ajouter un commentaire pour remettre en cause les
@@ -18,10 +18,10 @@ r&ocirc;le de m&eacute;diateur entre les deux
 qui est &eacute;valu&eacute;.</li> </ol>
 
 <p>Le but des commentaires est d'obtenir un consensus sur
-l'&eacute;valuation, le tout dans un climat qui favorise le
+l'&eacute;valuation, le tout dans un climat qui favorise un
 meilleur apprentissage.</p>
 
-<p>Si le travail est r&eacute;&eacute;valu&eacute;, alors les
+<p>Si le travail est r&eacute;&eacute;valu&eacute;, les
 commentaires de l'&eacute;valuation pr&eacute;c&eacute;dente sont
 effac&eacute;s et l'&eacute;valuation est recommenc&eacute;e
-&agrave; partir de z&eacute;ro.</p>
+&agrave; z&eacute;ro.</p>
