--- a/lang/fr/help/workshop/agreeassessments.html
+++ b/lang/fr/help/workshop/agreeassessments.html
@@ -1,10 +1,12 @@
 <p align=center><b>Accord sur l'&eacute;valuation</b></p>
 
-<p>Dans la phase de remise et d'&eacute;valuation, deux
+<p>Dans la phase de remise des travaux et d'&eacute;valuation, deux
 diff&eacute;rents processus d'&eacute;valuation d'un travail
 peuvent &ecirc;tre choisis par l'enseignant&nbsp;:</p>
 
-<ol> <li>L'&eacute;tudiant qui a fait le travail ne peut
+<ol>
+
+<li>L'&eacute;tudiant qui a fait le travail ne peut
 r&eacute;agir aux &eacute;valuations faites par ses pairs. Il n'y
 a donc pas d'&eacute;change entre l'&eacute;tudiant dont le
 travail est &eacute;valu&eacute; et ceux qui ont
@@ -21,9 +23,9 @@ pour chaque &eacute;l&eacute;ment de l'&eacute;valuation.</li>
 &ecirc;tre en accord ou en d&eacute;saccord. S'il est en accord,
 le processus d'&eacute;valuation est termin&eacute; pour cet
 &eacute;l&eacute;ment de l'&eacute;valuation et elle est
-utilis&eacute;e pour les calculs de la note accord&eacute;e par
+utilis&eacute;e pour le calcul de la note accord&eacute;e par
 les pairs. Si au contraire il y a d&eacute;saccord, les
-&eacute;tudiants qui ont fait l'&eacute;valuation ont alors
+&eacute;tudiants qui ont fait l'&eacute;valuation ont
 l'occasion de la r&eacute;viser. Les &eacute;tudiants entrent
 alors dans une boucle de r&eacute;visions/d&eacute;saccords
 jusqu'&agrave; ce qu'ils parviennent &agrave; un accord ou que la
@@ -39,8 +41,8 @@ dont le travail est &eacute;valu&eacute;.</li> </ol>
 notes pendant la phase d'&eacute;valuation, lorsqu'il choisit le
 deuxi&egrave;me processus (une des options de l'atelier). Pendant
 les n&eacute;gociations avec les &eacute;tudiants qui ont
-&eacute;valu&eacute; son travail, seuls les commentaires seront
-alors visibles de l'&eacute;tudiant dont le travail est
+&eacute;valu&eacute; son travail, seuls seront alors visibles
+les commentaires de l'&eacute;tudiant dont le travail est
 &eacute;valu&eacute;. Lorsqu'il y a accord, la note est alors
 affich&eacute;e pour cet &eacute;l&eacute;ment de
 l'&eacute;valuation. Cette option est disponible seulement
