--- a/lang/fr/help/workshop/anonymous.html
+++ b/lang/fr/help/workshop/anonymous.html
@@ -1,13 +1,15 @@
 <p align="center"><b>&Eacute;valuation anonyme</b></p>
 
-<p>Un travail peut &ecirc;tre &eacute;valu&eacute; par un ou des &eacute;tudiants sans
-qu'ils en connaissent l'auteur. Le nom et la photo de son auteur
-n'appara&icirc;tront pas aux correcteurs. Seul le nom du fichier
-contenant le travail sera d&eacute;voil&eacute;.</p>
+<p>Un travail peut &ecirc;tre &eacute;valu&eacute; par les
+autres &eacute;tudiants sans qu'ils en connaissent l'auteur.
+Avec cette option, le nom et la photo de l'auteur du travail
+n'appara&icirc;tront pas aux &eacute;tudiants qui l'&eacute;valuent.
+Seul le nom du fichier contenant le travail
+sera d&eacute;voil&eacute;.</p>
 
-<p>Lorsque l'&eacute;valuation n'est pas anonyme, le travail appara&icirc;t
-avec le nom et la photo de son auteur. Ceci peut influencer
-l'&eacute;valuation.</p>
+<p>Lorsque l'&eacute;valuation n'est pas anonyme, le travail
+appara&icirc;t avec le nom et la photo de son auteur. Ceci
+peut influencer l'&eacute;valuation.</p>
 
 <p>Notez que l'&eacute;valuation de l'enseignant n'est jamais
 anonyme.</p>
